--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "ahooks": "^3.7.8",
     "axios": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "qs": "^6.11.2",
